# oxidized-fiducial

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  orhid.scheme
.cargo/: config.toml
src/: imu.rs  main.rs
