[package]
name = "oxidized-fiducial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char-device = {version = "0.16.3", optional = true}
quaternion-core = "0.5.0"
serialport = "4.3.0"
xdotool = {version = "0.0.2", optional = true}
#opencv = "0.86.1"

[features]
#default=["debug"]
debug=[]
xdo=["dep:xdotool"]
mouse=["dep:char-device"]
